--- a/src/app/component/admin/admin.component.scss
+++ b/src/app/component/admin/admin.component.scss
@@ -1,5 +1,7 @@
 .entiretable{
-
+  width: 100%;
+  height: 100%;
+ 
 }
 table,th,td {
     border: 1px solid rgba(128, 128, 128, 0.486);
@@ -36,11 +38,24 @@ td{
 
 .updatebutton{
     cursor: pointer;
-    // border: none;
+    width:90px;
+    height: 40px;
+    background-color: rgb(238, 66, 95);
+    color: white;
+    border-radius: 5px;
+    border: none;
 
 }
 .deletebutton{
-    cursor: pointer;
+    // border: 1px solid gainsboro;
+    cursor: pointer; 
+    background: brown;
+    color: white;
+    width:90px;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    // width: 35%;
 }
 
 .buttons{
@@ -51,6 +66,9 @@ td{
     // bottom: 50px;
     border: none;
     // overflow-y:inherit;
+
+    //  position:relative;
+    //  z-index: 0;
 }
 
 .addbookbutton{
@@ -60,9 +78,23 @@ td{
     // right: 80%;
     margin-top: 100px;
     margin-right: 1015px;
+    // z-index: unset;
     
 }
 .addbutton{
-//    width:100px;
+   width:90px;
+   height: 40px;
+   background-color: rgba(0, 0, 255, 0.781);
+   color: white;
+   border-radius: 5px;
+   border: none;
     cursor: pointer;
+    // position: absolute;
+    // z-index: 2;
+    // z-index: unset;
+    
 }
+
+// ::ng-deep .mat-button-focus-overlay {
+//     display: none;
+//   }
