--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="section" fxLayout="row" fxLayoutAlign="center center">
+<div class="section" fxLayout="row" fxLayoutAlign="center center" ngClass.xs="section-xs">
 
     <mat-card class="matcard1" fxHide.sm fxHide.xs>
 
@@ -11,10 +11,9 @@
         </div>
     </mat-card>
 
-    <mat-card class="matcard2" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="95" fxFlex.sm="60">
+    <mat-card class="matcard2" >
         <!-- <div > -->
-            <div fxLayout="row" fxLayoutAlign="center center" fxLayout.xs="row" fxLayout.sm="row" fxFlex.xs="95"
-                fxFlex.xs="60">
+            <div fxLayout="row" fxLayoutAlign="center center" fxLayout.xs="row" fxLayout.sm="row" fxFlex.xs="95" fxFlex.xs="60">
                 <div class="login">
                     <P>LOGIN</P>
                 </div>
