--- a/src/app/component/signup/signup.component.html
+++ b/src/app/component/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="section" fxLayout="row" fxLayoutAlign="center center">
+<div class="section" fxLayout="row" fxLayoutAlign="center center" ngClass.xs="section-xs">
 
     <mat-card class="matcard1" fxHide.sm fxHide.xs>
 
@@ -11,7 +11,7 @@
         </div>
     </mat-card>
 
-    <mat-card class="matcard2" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="95" fxFlex.sm="60">
+    <mat-card class="matcard2">
         <div fxLayout="row" fxLayoutAlign="center center" fxLayout.xs="row" fxLayout.sm="row" fxFlex.xs="95" fxFlex.xs="60">
             <div class="login" routerLink="/login">
                 <P>LOGIN</P>
