--- a/src/app/component/login/login.component.scss
+++ b/src/app/component/login/login.component.scss
@@ -3,6 +3,9 @@
     width: 100%;
     height: 100%;
 }
+.section-xs{
+    background-color: white;
+}
 .matcard1{
     background-color:#F5F5F5;
     // margin-top: 200px; 
