--- a/src/app/component/signup/signup.component.html
+++ b/src/app/component/signup/signup.component.html
@@ -12,7 +12,8 @@
     </mat-card>
 
     <mat-card class="matcard2">
-        <div fxLayout="row" fxLayoutAlign="center center" fxLayout.xs="row" fxLayout.sm="row" fxFlex.xs="95" fxFlex.xs="60">
+        <div fxLayout="row" fxLayoutAlign="center center" fxLayout.xs="row" fxLayout.sm="row" fxFlex.xs="95"
+            fxFlex.xs="60">
             <div class="login" routerLink="/login">
                 <P>LOGIN</P>
             </div>
@@ -23,17 +24,16 @@
         <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
             <div class="form">
                 <div style=" margin-top: -30px;">
-                    <mat-form-field  style="height: 38px;">
+                    <mat-form-field style="height: 38px;">
                         <mat-label>Select an option</mat-label>
                         <mat-select formControlName="selectoption" disableRipple>
-                          <mat-option value="1">User</mat-option>
-                          <mat-option value="2">Admin</mat-option>
-                          <!-- <mat-option value="3">Option 3</mat-option> -->   
+                            <mat-option value="1">User</mat-option>
+                            <mat-option value="2">Admin</mat-option>
                         </mat-select>
-                      </mat-form-field>
+                    </mat-form-field>
                 </div>
 
-                
+
                 <div class="fullname">
                     <div>
                         <mat-label>Full Name</mat-label>
