--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="section" fxLayout="row" fxLayoutAlign="center center" ngClass.xs="section-xs"  >
+<div class="section" fxLayout="row" fxLayoutAlign="center center" ngClass.xs="section-xs">
 
     <mat-card class="matcard1" fxHide.sm fxHide.xs>
 
@@ -11,108 +11,86 @@
         </div>
     </mat-card>
 
-    <mat-card class="matcard2" >
-        <!-- <div > -->
-            <div fxLayout="row" fxLayoutAlign="center center" fxLayout.xs="row" fxLayout.sm="row" fxFlex.xs="95" fxFlex.xs="60">
-                <div class="login">
-                    <P>LOGIN</P>
-                </div>
-                <div class="signup" routerLink="/signup">
-                    <p>SIGNUP</p>
-                </div>
+    <mat-card class="matcard2">
+        <div fxLayout="row" fxLayoutAlign="center center" fxLayout.xs="row" fxLayout.sm="row" fxFlex.xs="95"
+            fxFlex.xs="60">
+            <div class="login">
+                <P>LOGIN</P>
             </div>
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="form">
+            <div class="signup" routerLink="/signup">
+                <p>SIGNUP</p>
+            </div>
+        </div>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            <div class="form">
 
-                    <div style=" margin-top: -30px;">
-                        <mat-form-field  style="height: 38px;">
-                            <mat-label>Select an option</mat-label>
-                            <mat-select formControlName="selectoption" disableRipple>
-                              <mat-option value="1">User</mat-option>
-                              <mat-option value="2">Admin</mat-option>
-                              <!-- <mat-option value="3">Option 3</mat-option> -->   
-                            </mat-select>
-                          </mat-form-field>
-                    </div>
+                <div style=" margin-top: -30px;">
+                    <mat-form-field style="height: 38px;">
+                        <mat-label>Select an option</mat-label>
+                        <mat-select formControlName="selectoption" disableRipple>
+                            <mat-option value="1">User</mat-option>
+                            <mat-option value="2">Admin</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
 
-                    <div class="email">
-                        <div>
-                            <mat-label>Email Id</mat-label>
-                        </div>
-                        <div>
-                            <mat-form-field appearance="outline">
-
-                                <input type="text" formControlName="email" matInput placeholder="">
-                                <mat-error>Enter an email address</mat-error>
-                            </mat-form-field>
-
-                        </div>
-
-                    </div>
-
-                    <div class="password">
-                        <div>
-                            <mat-label>Password</mat-label>
-                        </div>
-                        <div>
-                            <mat-form-field appearance="outline">
-
-                                <input type="password" formControlName="password" matInput placeholder="">
-                                <mat-error>Enter a password</mat-error>
-                            </mat-form-field>
-
-                        </div>
-
-                    </div>
-
-                    <div class="forgotpasswordbutton">
-                        <button class="button" routerLink="/forgotemail">Forgot password?</button>
-
-                    </div>
-
+                <div class="email">
                     <div>
-                        <button class="signupbutton"  mat-flat-button>Login</button>
+                        <mat-label>Email Id</mat-label>
                     </div>
-                    
-                    <!-- <div>
-                        <button [matMenuTriggerFor]="menu" class="signupbutton"  mat-flat-button>
-                            User/Admin
-                            
-                        </button>
-                        <mat-menu class="matmenu" #menu="matMenu">
-                            <button  class="userbutton" mat-menu-item>
-                                UserLogin
-                                
-                            </button>
-
-                            <button  class="adminbutton" mat-menu-item
-                            >AdminLogin
-                               
-                            </button>
-
-                        </mat-menu>
-
-                    </div> -->
-
-                    <div class="or">
-                        <h2>OR</h2>
-                    </div>
-
                     <div>
-                        <div class="button1" fxLayoutGap="20px">
-                            <button class="facebookbutton" mat-flat-button color="primary">Facebook</button>
-                            <button class="googlebutton" mat-flat-button>Google</button>
+                        <mat-form-field appearance="outline">
 
-                        </div>
+                            <input type="text" formControlName="email" matInput placeholder="">
+                            <mat-error>Enter an email address</mat-error>
+                        </mat-form-field>
 
                     </div>
-
-
 
                 </div>
-            </form>
 
-        <!-- </div> -->
+                <div class="password">
+                    <div>
+                        <mat-label>Password</mat-label>
+                    </div>
+                    <div>
+                        <mat-form-field appearance="outline">
+
+                            <input type="password" formControlName="password" matInput placeholder="">
+                            <mat-error>Enter a password</mat-error>
+                        </mat-form-field>
+
+                    </div>
+
+                </div>
+
+                <div class="forgotpasswordbutton">
+                    <button class="button" routerLink="/forgotemail">Forgot password?</button>
+
+                </div>
+
+                <div>
+                    <button class="signupbutton" mat-flat-button>Login</button>
+                </div>
+
+                <div class="or">
+                    <h2>OR</h2>
+                </div>
+
+                <div>
+                    <div class="button1" fxLayoutGap="20px">
+                        <button class="facebookbutton" mat-flat-button color="primary">Facebook</button>
+                        <button class="googlebutton" mat-flat-button>Google</button>
+
+                    </div>
+
+                </div>
+
+
+
+            </div>
+        </form>
+
     </mat-card>
 
 </div>
