--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -12,8 +12,10 @@
 
         <mat-card class="searchbar" fxLayout="row" fxLayout.xs="row">
             <img class="searchimg" src="../../../assets/search_black_24dp (1).svg" alt="">
-            
-            <input class="search1" type="text" name="search" placeholder="Search" #search (keyup)="clearFilter(search.value)" fxHide.xs fxHide.sm> <!--this (keyup) is used for data binding for search pipe part THIS IS DONE FOR SEARCH PIPE PART IN GETALLBOOKS AND DASHBOARD-->
+
+            <input class="search1" type="text" name="search" placeholder="Search" #search
+                (keyup)="clearFilter(search.value)" fxHide.xs fxHide.sm>
+            <!--this (keyup) is used for data binding for search pipe part THIS IS DONE FOR SEARCH PIPE PART IN GETALLBOOKS AND DASHBOARD-->
         </mat-card>
 
         <div class="profile" [matMenuTriggerFor]="menu" fxLayout="column" fxLayoutAlign="center center"
@@ -23,9 +25,8 @@
 
             <mat-menu class="matmenu" #menu="matMenu">
                 <div fxLayout="column" fxLayoutGap="3px">
-                    <h3 class="welcometext">Welcome, {{fullName}}</h3>
+                    <h3 class="welcometext">Welcome,Shaunak wankhade</h3>
                     <h5 class="logouttext">To Logout account</h5>
-
                 </div>
 
                 <button (click)="Logout()" class="logoutbutton" mat-menu-item>
@@ -42,10 +43,11 @@
         <div class="cart" (click)="cart()" fxLayout="column" fxLayoutAlign="center center" fxLayout.xs="row"
             fxFlex.xs="50">
 
-            <button style="background-color: darkred; border: none; cursor: pointer;" matBadge={{badgecount}} matBadgePosition="after" matBadgeColor="warn" [matBadgeHidden]="badgecount==0">
+            <button style="background-color: darkred; border: none; cursor: pointer;" matBadge={{badgecount}}
+                matBadgeSize="small" matBadgePosition="after" matBadgeColor="warn" [matBadgeHidden]="badgecount==0">
                 <img class="cartimg" src="../../../assets/shopping_cart_white_24dp.svg" alt="">
             </button>
-            <p>Cart</p>
+            <p style="margin-top:-10px;">Cart</p>
 
         </div>
 
