[Shaunak] Added: Refactored code for getcart component

--- a/src/app/component/getcart/getcart.component.html
+++ b/src/app/component/getcart/getcart.component.html
@@ -1,18 +1,11 @@
 <mat-accordion class="example-headers-align">
-    <!-- <mat-expansion-panel  class="panel1" [expanded]="step === 0" (opened)="setStep(0)" hideToggle> -->
-        <mat-expansion-panel  class="panel1" [expanded]="true" hideToggle>
+    <mat-expansion-panel class="panel1" [expanded]="true" hideToggle>
         <mat-expansion-panel-header>
             <mat-panel-title>
                 My Cart({{cartcount}})
             </mat-panel-title>
 
         </mat-expansion-panel-header>
-
-
-        <!-- <div class="cartcount">
-    <span class="count">My Cart({{cartcount}})</span>
-</div> -->
-
         <div class="section">
             <div fxLayout="row" fxLayoutAlign="center center">
                 <div fxLayout="column" fxLayoutGap="5px">
@@ -66,7 +59,8 @@
                         <span class="currentlocation">Use current location</span>
                     </div>
                     <div>
-                        <button mat-flat-button class="button" color="primary" *ngIf="step1button && disabled" (click)="setStep(1)">Place Order
+                        <button mat-flat-button class="button" color="primary" *ngIf="step1button && disabled"
+                            (click)="setStep(1)">Place Order
 
                         </button>
                     </div>
@@ -77,8 +71,7 @@
         </div>
     </mat-expansion-panel>
 
-    <!-- <mat-expansion-panel class="panel2" [expanded]="step === 1" (opened)="setStep(1)" hideToggle> -->
-        <mat-expansion-panel class="panel2" [expanded]="step1" hideToggle>
+    <mat-expansion-panel class="panel2" [expanded]="step1" hideToggle>
         <mat-expansion-panel-header>
             <mat-panel-title>
                 Address Details
@@ -88,7 +81,7 @@
 
         <div class="customerdetails" fxLayout="row" fxLayoutAlign="space-between start">
 
-            <form [formGroup]="customerForm" (ngSubmit)="onSubmit()" >
+            <form [formGroup]="customerForm" (ngSubmit)="onSubmit()">
                 <div class="maindivofform" fxLayout="column" fxLayoutGap="2px">
 
                     <div class="details" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="40%">
@@ -101,12 +94,10 @@
                                 <mat-label class="names">Full Name</mat-label>
                             </div>
                             <div>
-                                <!-- <p> -->
                                 <mat-form-field appearance="outline">
                                     <input matInput type="text" formControlName="fullName" placeholder="">
                                     <mat-error>Enter full name</mat-error>
                                 </mat-form-field>
-                                <!-- </p> -->
                             </div>
                         </div>
 
@@ -192,8 +183,8 @@
                         <span>Add New Address</span>
                     </div>
                     <div>
-                        <button mat-flat-button class="continuebutton" color="primary"
-                            (click)="setStep(2)" *ngIf="step2button" >Continue</button>
+                        <button mat-flat-button class="continuebutton" color="primary" (click)="setStep(2)"
+                            *ngIf="step2button">Continue</button>
                     </div>
                 </div>
 
@@ -206,8 +197,7 @@
         </div>
     </mat-expansion-panel>
 
-    <!-- <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)" hideToggle> -->
-        <mat-expansion-panel [expanded]="step2"hideToggle>
+    <mat-expansion-panel [expanded]="step2" hideToggle>
         <mat-expansion-panel-header>
             <mat-panel-title>
                 Order Summary
@@ -255,7 +245,7 @@
 
                     <div>
                         <button mat-flat-button class="checkoutbutton" (click)="ordersummary()"
-                            color="primary" >Checkout</button>
+                            color="primary">Checkout</button>
                     </div>
                 </div>
 
