[Shaunak] Added: Refactored code for orderplaced successfully component

--- a/src/app/component/orderplacedsuccessfully/orderplacedsuccessfully.component.html
+++ b/src/app/component/orderplacedsuccessfully/orderplacedsuccessfully.component.html
@@ -20,7 +20,11 @@
             </tr>
 
             <td style="text-align:center">admin@bookstore.com</td>
+            <!-- <td style="text-align:center">{{email}}</td> -->
+
             <td style="text-align:center">+91 8163475881</td>
+            <!-- <td style="text-align:center">{{mobileNo}}</td> -->
+
             <td style="text-align:center">42, 14th Main, 15th Cross, Sector4, opp to BDA<br>complex, near kumarakom
                 restaurant, HSR Layout.</td>
 
