--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -9,6 +9,7 @@ background-color: darkred;
 }
 .imgandtext{
    margin-left: -18px;
+//    border: 1px solid blue;
 }
 .book{
     height: 40px;
@@ -63,8 +64,11 @@ background-color: darkred;
     margin-top: 28px;
     cursor: pointer;
 }
+.button{
+    // border: 1px solid green;
+}
 .cartimg{
-
+     border: none;
 }
 p{
     color: white; 
@@ -112,4 +116,88 @@ p{
 .logouttext{
     margin-left: 15px;
 
+}
+@media(max-width:550px){
+    
+.imgandtext{
+    // margin-left: 20px;
+    // border: 1px solid blue;
+   
+ }
+ .book{
+    height: 40px;
+    width: 40px;
+    margin-top: 9px;
+    // border-radius: 20px;
+    margin-left: 20px;
+    border: none;
+    cursor: pointer;
+    
+}
+.text{
+  color: white;
+  margin-left: 10px;
+  margin-top: 14px;
+  opacity: 0.9;
+  cursor: pointer;
+
+}
+.profile{
+    // margin-left: 270px;
+    margin-top: 4px;
+    cursor: pointer;
+
+    // width: 70px;
+    // border: 1px solid yellow;
+    position: relative;
+    right: 150px;
+}
+.profileimg{
+    // margin-left: -2px;
+    margin-top: 15px;
+}
+.profileimg p{
+    border: 1px solid red;
+    
+}
+
+.cart{
+    margin-left: 40px;
+    // margin-top: 28px;
+    cursor: pointer;
+
+    position: relative;
+    right: 150px;
+}
+.cartimg{
+    // border: 1px solid green;
+    margin-top: -4px;
+   
+}
+.matBadge{
+    border: 1px solid yellow;
+    
+}
+// .cart .button{
+//     border: 1px solid yellow;
+// }
+// p{
+//     color: white; 
+//     opacity: 0.9;
+//     font-size: x-small;
+//     margin-top: -5px;
+// }
+
+
+::ng-deep .mat-menu-panel.matmenu{
+    border: 1px solid red;
+    width: 225px;
+    height: 180px;
+    // position: relative;
+    // right:120px;
+    // left: 150px;
+    margin-top: 15px;
+    margin-right: 185px;
+    
+}
 }
