--- a/src/app/component/getcart/getcart.component.html
+++ b/src/app/component/getcart/getcart.component.html
@@ -53,7 +53,8 @@
 
                 </div>
 
-                <div class="rightdiv" fxLayout="column" fxLayoutAlign="space-between center" fxLayoutGap="80%">
+                <div class="rightdiv" fxLayout="column" fxLayout.sm="column" fxLayout.xs="column"
+                    fxLayoutAlign="space-between center" fxLayoutGap="80%">
                     <div class="location" fxLayoutAlign="center center">
                         <mat-icon class="placeIcon">place</mat-icon>
                         <span class="currentlocation">Use current location</span>
@@ -118,17 +119,19 @@
                     </div>
 
                     <div class="details" fxLayout="column">
-                        <div>
-                            <mat-label class="names">Address</mat-label>
-                        </div>
-                        <div>
+                        <div class="addressofcustomer">
+                            <div>
+                                <mat-label class="names">Address</mat-label>
+                            </div>
+                            <div>
 
-                            <mat-form-field>
-                                <textarea matInput type="text" formControlName="address" placeholder=""></textarea>
-                                <!-- <textarea type="text" formControlName="address" placeholder=""></textarea>  -->
-                                <mat-error>Enter address</mat-error>
-                            </mat-form-field>
+                                <mat-form-field>
+                                    <textarea matInput type="text" formControlName="address" placeholder=""></textarea>
+                                    <!-- <textarea type="text" formControlName="address" placeholder=""></textarea>  -->
+                                    <mat-error>Enter address</mat-error>
+                                </mat-form-field>
 
+                            </div>
                         </div>
                     </div>
 
@@ -177,9 +180,10 @@
 
 
                 </div>
-                <div class="addressandcontinue" fxLayout="column" fxLayoutAlign="space-between center"
+                <div class="addressandcontinue" fxLayout="column" 
+                 fxLayoutAlign="space-between center"
                     fxLayoutGap="50%">
-                    <div class="address" fxLayoutAlign="center center">
+                    <div class="address" fxLayoutAlign="center center" fxHide.sm fxHide.xs>
                         <span>Add New Address</span>
                     </div>
                     <div>
@@ -197,7 +201,7 @@
         </div>
     </mat-expansion-panel>
 
-    <mat-expansion-panel [expanded]="step2" hideToggle>
+    <mat-expansion-panel class="panel3" [expanded]="step2" hideToggle>
         <mat-expansion-panel-header>
             <mat-panel-title>
                 Order Summary
