--- a/src/app/component/login/login.component.scss
+++ b/src/app/component/login/login.component.scss
@@ -97,6 +97,7 @@
     width: 100%;
 }
 .mat-form-field{
+    // border: 1px solid red;
     // height: 5px;
     width: 275px;
 }
@@ -193,4 +194,42 @@ h2{
     margin-top: 10px;
     border-radius: 5px;
 
+}
+
+@media (max-width: 420px) {
+    .section{
+        background-color: gray;
+        width: 420px;
+        // height: 100%;
+    }
+    
+.matcard2{
+    background-color:#F5F5F5;
+    // margin-top: 200px; 
+    margin-right: -12px;
+    margin-left: 12px;
+    height: 480px; 
+    width: 420px;
+    // padding-bottom: 10px; 
+    // display: flex; 
+    // position: relative;
+    // top: -38%; 
+    // left: 42%;
+    // right: 3%;
+}
+
+// .form{
+//     // border: 1px solid blue;
+//     position: relative;
+//     right: 34%;
+//     top: 12%;
+//     width: 100%;
+// }
+// .mat-form-field{
+//     // border: 1px solid red;
+//     // height: 5px;
+//     width: 330px;
+// }
+
+   
 }
