--- a/src/app/component/quickview/quickview.component.scss
+++ b/src/app/component/quickview/quickview.component.scss
@@ -134,14 +134,6 @@
 
 }
 
-
-
-
-
-
-
-
-
 .bookdetail{
     opacity: 0.7; 
     margin-top: 20px; 
@@ -301,3 +293,91 @@ input#rate-5:checked ~ label{
     top: -10px;
 
 }
+.section{
+    border: none;
+}
+// @media only screen and(min-width:0px) and(max-width:400px) {
+//     .section{
+//         // width:400px;
+       
+//     }
+    
+
+// .imageandbutton{
+//     border:2px solid yellow;
+//     width: 150px;
+//     height: 200px;
+//     margin-top: 15%;
+//     margin-right:170px;
+//     // margin-left: -54px;
+
+// }
+   
+// // .smallimages{
+// //         margin-bottom: 16%;
+// //         width: 30px;
+// //         height: 50px; 
+// //         margin-right: 145px; 
+// //         margin-top: 10%;
+// //     }
+//     .big1{
+//         width: 200px;
+//         height: 200px;
+//         border: 1px solid gainsboro;
+//     }
+//     .image1{
+//     //    border: 20px;
+//        width: 100px;
+//        height: 150px;
+//        padding: 25px;
+//     //    padding-left: 32px;
+//     }
+    
+// .cartandwishlistbutton{
+//     margin-top: 8px;
+    
+//     // position: sticky;
+    
+// }
+// .addtobag{
+//     background: brown; 
+//     color: rgba(255, 255, 255, 0.767); 
+//     width: 80px; 
+//     font-size: 9px;
+
+// }
+// .wishlist{
+//     border: 1px solid red;
+//     background: black; 
+//     color: rgba(255, 255, 255, 0.767); 
+//     width: 88px;
+//     height:37px;
+//     font-size:9px;
+//     margin-right: 20px; 
+
+// }
+// .wishlistIcon{
+//     width:8px;
+//     margin-right: 16px;
+// }
+//     .bookdetailsdiv{
+//         width:200px;
+//         margin-left: 0%; 
+//         margin-bottom: 5%; 
+//         margin-top: 15%;
+    
+//     }
+    
+// .entirebook{
+//     border: 1px solid red;
+//     // margin-left: -130px;
+//     margin-right: 30px;
+
+// }
+// .bookname{
+//     font-size: 20px; 
+//     margin-bottom: 10px;
+//     // margin-left: -130px;
+
+// }
+// }
