[Shaunak] Added: Refactored code for Bookstore application

--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -118,7 +118,10 @@ p{
 
 }
 @media(max-width:550px){
-    
+    .mattoolbar{
+        // border: 5px solid blue;
+        
+    }   
 .imgandtext{
     // margin-left: 20px;
     // border: 1px solid blue;
