--- a/src/app/component/getcart/getcart.component.scss
+++ b/src/app/component/getcart/getcart.component.scss
@@ -1,103 +1,150 @@
-.panel1{
+.panel1 {
     // border: 1px solid yellow;
     height: auto;
 }
-.panel2{
+
+.panel2 {
     // border: 1px solid green;
 }
-.panel3{
-   border:none;
+
+.panel3 {
+    border: none;
+}
+.count{
+
+}
+.location {
+    border: 1px solid lightgrey;
+    height: 30px;
+    width: 200px;
+    margin-top: 9px;
+    //  position: relative;
+    //  top: -60px;
+    //  left: 110px;
+    margin-left: 430px;
+
 }
 
-.section{
+.placeIcon {
+    color: darkred;
+}
+
+.currentlocation {
+    margin-top: 3px;
+}
+
+.button {
+    border: 2px solid brown;
+    width: 150px;
+    // position: relative;
+    // top: -60px;
+    // left: 127px;
+    margin-left: 530px;
+
+}
+
+.section {
     margin-bottom: 2%;
-    // border: 1px solid red;
+    //border: 1px solid red;
     // width: 50%;
     // margin-left: 25%;
     // margin-top: 10%;
     // margin-right: 40%;
-    width: 750px ;
-    height: 330px;
+    width: 750px;
+
 
 }
-.cartbook{
-    // border: 1px solid green;
+
+.countandlocation {}
+
+.cartbook {
+    //border: 1px solid green;
     width: 160%;
     margin-left: -46%;
-    
 
 }
 
-.bookImage{
+.bookImage {
     // border: 1px solid yellow;
-    height: 95px;
+    height: 115px;
     width: 80px;
+    margin: 10px;
     // margin-top: 20%;   
     // left: 213px;
     // width: 65px;
     // height: 85px;
 
 }
-.entirebook{
-    // border: 1px solid black;
-    margin-top: -2%;
+
+.entirebook {
+    //border: 1px solid black;
+    margin-top: 1%;
     margin-left: 10%;
-   
+
 
 }
-.image{
+
+.image {
     border: none;
 }
-.bookname{
+
+.bookname {
     margin-left: 15px;
     font-family: Roboto;
-    font-weight: 500; 
+    font-weight: 500;
     margin-top: 8px;
     font-size: 18px;
     margin-bottom: 5px;
 
 }
-.author{
-    font-size: 12px; 
-    color: grey; 
+
+.author {
+    font-size: 12px;
+    color: grey;
     margin-left: 15px;
     margin-bottom: 5px;
 
 }
-.price{
+
+.price {
     font-size: 15px;
     margin-left: 15px;
     margin-bottom: 10%;
 
 }
-.discountprice{
+
+.discountprice {
     font-weight: 620;
 
 }
-.originalprice{
+
+.originalprice {
     color: grey;
 
 }
 
-.quantity{
+.quantity {
     // border: 1px solid palevioletred;
     position: relative;
     left: 10px;
 
 }
-.negativebutton{
-    background-color: white; 
+
+.negativebutton {
+    background-color: white;
     margin-right: 10px;
     width: 24px;
     height: 24px;
 }
-.negative{
+
+.negative {
     color: lightgrey;
     position: relative;
     top: -10px;
 
 }
-.bookquantity{
+
+.bookquantity {
     font-size: 15px;
     border: 1px solid whitesmoke;
     // height: 25px;
@@ -108,91 +155,75 @@
     height: 23px;
 
 }
-.positivebutton{
-    background-color: white; 
+
+.positivebutton {
+    background-color: white;
     margin-left: 10px;
     width: 24px;
     height: 24px;
 
 }
-.positive{
+
+.positive {
     color: black;
     position: relative;
     top: -10px;
 
 }
-.remove{
+
+.remove {
     margin-left: 15px;
     font-size: 15px;
     font-family: Lato;
     cursor: pointer;
 
 }
-.rightdiv{
+
+.rightdiv {
     // border: 1px solid yellow;
     // margin-top: -50px;
     // margin-left: 100px;
     margin-right: 5%;
 }
-.location{
-    border: 1px solid lightgrey;
-     height: 30px;
-     width: 200px;
-     margin-top: 10px;
-     position: relative;
-     top: -60px;
-     left: 110px;
+
+.example-headers-align .mat-expansion-panel-header-title,
+.example-headers-align .mat-expansion-panel-header-description {
+    flex-basis: 0;
+}
+
+.example-headers-align .mat-expansion-panel-header-description {
+    justify-content: space-between;
+    align-items: center;
 
 }
-.placeIcon{
-    color: darkred;
+
+.example-headers-align .mat-form-field+.mat-form-field {
+    margin-left: 8px;
+
 }
-.currentlocation{
-    margin-top: 3px;
-}
-.button{
-    width: 150px;
-    // position: relative;
-    // top: -60px;
-    left: 127px;
-}
-.example-headers-align .mat-expansion-panel-header-title,
- .example-headers-align .mat-expansion-panel-header-description {
-   flex-basis: 0;
- }
- 
- .example-headers-align .mat-expansion-panel-header-description {
-   justify-content: space-between;
-   align-items: center;
-   
- }
- 
- .example-headers-align .mat-form-field + .mat-form-field {
-   margin-left: 8px;
-   
- }
- .mat-expansion-panel{
+
+.mat-expansion-panel {
     //  border:1px solid blue;
     //  margin-top: 20px;
-     width: 780px ;
-     margin-left: 200px;
-     position: relative;
-     top: 120px;
- }
-.customerdetails{
-
+    width: 780px;
+    margin-left: 200px;
+    position: relative;
+    top: 120px;
 }
-.maindivofform{
 
-}
-.details{
+.customerdetails {}
+
+.maindivofform {}
+
+.details {
     // margin-right: 20px;
     margin-bottom: 20px;
     // border: 1px solid blue;
     margin-left: 30px;
 
 }
-.heading{
+
+.heading {
     font-size: 18px;
     font-weight: 500;
     margin-top: 20px;
@@ -200,44 +231,45 @@
     margin-left: -28px;
 
 }
-.fullname{
 
-}
-.mobileno{
+.fullname {}
 
-}
-.addressofcustomer{
+.mobileno {}
 
-}
-.city{
+.addressofcustomer {}
 
-}
-.state{
+.city {}
 
-}
-.names{
+.state {}
+
+.names {
     font-size: 15px;
     font-weight: 500;
 
 }
-.type{
+
+.type {
     margin-left: 30px;
     margin-bottom: 20px;
     font-weight: 500;
 }
-.home{
+
+.home {
     margin-left: 30px;
 
 }
-.work{
+
+.work {
     margin-left: 100px;
 
 }
-.other{
+
+.other {
     margin-left: 100px;
 
 }
-.address{
+
+.address {
     border: 1px solid darkred;
     color: darkred;
     margin-right: 20px;
@@ -248,358 +280,410 @@
     position: relative;
     left: 100px;
 }
-.continuebutton{
+
+.continuebutton {
     width: 150px;
     margin-left: 15px;
     position: relative;
     top: 170px;
     left: 95px;
 }
-.addressandcontinue{
+
+.addressandcontinue {
     // border: 1px solid green;
     position: relative;
- // top: -455px;
+    // top: -455px;
     bottom: 420px;
     left: 310px;
 }
-.maindivofform{
+
+.maindivofform {
     // border: 1px solid blue;
 }
-.mat-form-field{
+
+.mat-form-field {
     // border: 1px solid red
 }
-.input{
+
+.input {
     // border: 1px solid yellow
 }
 
-.checkoutbutton{
+.checkoutbutton {
     background-origin: 1px solid green;
     width: 150px;
-    position: relative;
-    left: 130px;
-    top: 200px;
-    margin-left: 50px;
-}
-
-@media(max-width:550px){
-    .example-headers-align .mat-expansion-panel-header-title,
- .example-headers-align .mat-expansion-panel-header-description {
-   flex-basis: 0;
-   border: 1px solid red;
- }
- 
- .example-headers-align .mat-expansion-panel-header-description {
-   justify-content: space-between;
-   align-items: center;
-   
- }
- 
- .example-headers-align .mat-form-field + .mat-form-field {
-   margin-left: 8px;
-   
- }
- .mat-expansion-panel{
-    //  border:1px solid blue;
-    //  margin-top: 20px;
-     width: 780px ;
-     margin-left: 200px;
-     position: relative;
-     top: 120px;
- }
-
- .panel1{
-    // border: 1px solid yellow;
-    width: 385px;
-    height: auto;
-    position: relative;
-    right: 195px;
-    // margin-right: 100px;
-}
-.section{
-    margin-bottom: 2%;
-    // border: 1px solid red;
-    // width: 50%;
-    // margin-left: 25%;
-    // margin-top: 10%;
-    // margin-right: 40%;
-    width:fit-content;
-    height: 330px;
-
-}
-.cartbook{
-    // border: 1px solid green;
-    // width: 160%;
-    // margin-left: 5%;
-    width: 100px;
-    height: 290px;
-    margin-left: -4px;
-    
-
-}
-.image{
-    margin-left: 10px;
-}
-.entirebook{
-    // border: 1px solid black;
-    // margin-top: -2%;
-    // margin-left: 10%;
-    width: 230px;
-    // margin-right:50px;
-    position: relative;
-    right: 12px;
-   
-
-}
-
-.bookname{
-    margin-left: 15px;
-    font-family: Roboto;
-    font-weight: 500; 
-    margin-top: 8px;
-    font-size: 18px;
-    margin-bottom: 5px;
-
-}
-.author{
-    font-size: 12px; 
-    color: grey; 
-    margin-left: 15px;
-    margin-bottom: 5px;
-
-}
-.price{
-    font-size: 15px;
-    margin-left: 15px;
-    margin-bottom: 10%;
-
-}
-.discountprice{
-    font-weight: 620;
-
-}
-.originalprice{
-    color: grey;
-
-}
-
-.quantity{
-    // border: 1px solid palevioletred;
-    position: relative;
-    left: 10px;
-
-}
-.negativebutton{
-    background-color: white; 
-    margin-right: 10px;
-    width: 24px;
-    height: 24px;
-}
-.negative{
-    color: lightgrey;
-    position: relative;
-    top: -10px;
-
-}
-.bookquantity{
-    font-size: 15px;
-    border: 1px solid whitesmoke;
-    // height: 25px;
-    // width: 40px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    text-align: center;
-    width: 40px;
-    height: 23px;
-
-}
-.positivebutton{
-    background-color: white; 
-    margin-left: 10px;
-    width: 24px;
-    height: 24px;
-
-}
-.positive{
-    color: black;
-    position: relative;
-    top: -10px;
-
-}
-.remove{
-    margin-left: 15px;
-    font-size: 15px;
-    font-family: Lato;
-    cursor: pointer;
-
-}
-
-
-.rightdiv{
-    // border: 1px solid yellow;
-    // margin-top: -50px;
-    // margin-left: 100px;
-    // margin-right: 250px;
-    // height: 320px;
-}
-.location{
-    border: 1px solid lightgrey;
-     height: 30px;
-     width: 155px;
-     margin-top: 80px;
-    //  margin-right: 0px;
     // position: relative;
-    // right: 70px;
-    //  top: -60px;
-     
-    //  left: 110px;
-
-    
-
-}
-.placeIcon{
-    color: darkred;
-}
-.button{
-    // border: 1px solid red;
-    width: 120px;
-    margin-top: 55px;
-    // position: relative;
-    // top: -60px;
-    // left: 127px;
-    right: 110px;
-    
-
-}
-.panel2{
-    // border: 1px solid red;
-    width: 385px;
-    position: relative;
-    right: 195px;
-}
-.maindivofform{
-    // border: 1px solid blue;
-    width: 350px;
-}
-.details{
-    // margin-right: 20px;
-    margin-bottom: 20px;
-    // border: 1px solid yellow;
-    // margin-left: 30px;
-    // margin-right: 30px;
-    position: relative;
-    right: 20px;
-
-}
-.mat-form-field{
-    // border: 1px solid red;
-    width:170px;
-}
-.fullname{
-    // border: 1px solid chocolate;
-    // margin-right: 30px;
-    position: relative;
-    right: 25px;
-}
-.mobileno{
-    // border: 1px solid chocolate;
-    // margin-right: 30px;
-    width: auto;
-    position: relative;
-    right: 32px;
-    
-}
-.addressofcustomer{
-    // border: 1px solid chocolate;
-    // margin-right: 30px;
-    position: relative;
-    right: 25px;
-}
-.city{
-    // border: 1px solid chocolate;
-    // margin-right: 30px;
-    position: relative;
-    right: 25px;
-}
-.state{
-    // border: 1px solid chocolate;
-    // margin-right: 30px;
-    width: auto;
-    position: relative;
-    right: 10px;
-}
-
-.type{
-    position: relative;
-    right: 45px;
-    // margin-left: 30px;
-    margin-bottom: 20px;
-    font-weight: 500;
-}
-.home{
-    // border: 1px solid chocolate;
-    // margin-right: 60px;
-    position: relative;
-    right: 45px;
-}
-.work{
-    // border: 1px solid chocolate;
-    margin-left: 100px;
-    position: relative;
-    right: 90px;
-
-}
-.other{
-    // border: 1px solid chocolate;
-    margin-left: 100px;
-    position: relative;
-    left: 115px;
-    bottom: 23px;
-
-}
-.addressandcontinue{
-    // border: 1px solid green;
-    position: relative;
- // top: -455px;
-    // bottom: 420px;
-    // right: 100px;
-    margin-top: 300px;
-    margin-left: -255px;
-    width: 20px;
-    
-}
-// .address{
-//     border: 1px solid darkred;
-//     color: darkred;
-//     // margin-right: 20px;
-//     margin-top: 20px;
-//     margin-bottom: 20px;
-//     height: 40px;
-//     width: 180px;
-//     position: relative;
-//     // left: 100px;
-//     // right: 100px;
-// }
-.continuebutton{
-    width: 150px;
-    // margin-left: 15px;
-    position: relative;
-    top: 170px;
-    // left: 95px;
-}
-.panel3{
-    width: 385px;
-    position: relative;
-    right: 195px;
-}
-
-.checkoutbutton{
-    border: 1px solid green;
-    background-origin: 1px solid green;
-    width: 120px;
-    position: relative;
     // left: 130px;
-    top: 150px;
-    left: 90px;
-    margin-left: 50px;
-    // margin-top: -100px;
+    // top: 200px;
+    margin-left: 530px;
 }
+
+@media(max-width:550px) {
+
+    .example-headers-align .mat-expansion-panel-header-title,
+    .example-headers-align .mat-expansion-panel-header-description {
+        flex-basis: 0;
+        //    border: 1px solid red;
+    }
+
+    .example-headers-align .mat-expansion-panel-header-description {
+        justify-content: space-between;
+        align-items: center;
+
+    }
+
+    .example-headers-align .mat-form-field+.mat-form-field {
+        margin-left: 8px;
+
+    }
+
+    .mat-expansion-panel {
+        //  border:1px solid blue;
+        //  margin-top: 20px;
+        width: 780px;
+        margin-left: 200px;
+        position: relative;
+        top: 120px;
+    }
+
+    .panel1 {
+        // border: 1px solid yellow;
+        width: 385px;
+        height: auto;
+        position: relative;
+        right: 195px;
+        // margin-right: 100px;
+    }
+
+    .countandlocation {
+        //border: 1px solid black;
+        // width: 100px;
+    }
+    .count{
+      //border: 1px solid yellow;
+      width: 80px;
+    }
+    .location {
+        border: 1px solid lightgrey;
+        height: 30px;
+        width: 195px;
+        // margin-top: 10px;
+        //  margin-right: 0px;
+        // position: relative;
+        // right: 330px;
+
+        //  top: -60px;  
+        //  left: 110px;
+        margin-left: 60px;
+    }
+
+    .placeIcon {
+        color: darkred;
+    }
+
+    .currentlocation {
+        margin-top: 3px;
+        width: 150px;
+    }
+
+    .button {
+        border: 1px solid green;
+        width: 120px;
+        margin-top: 55px;
+        // position: relative;
+        // right: 370px;
+
+        // top: -60px;
+        // left: 127px;
+        margin-left: 200px;
+
+    }
+
+    .section {
+        margin-bottom: 2%;
+        // border: 1px solid red;
+        // width: 50%;
+        // margin-left: 25%;
+        // margin-top: 10%;
+        // margin-right: 40%;
+        width: fit-content;
+        // height: 330px;
+
+    }
+
+    .cartbook {
+        // border: 1px solid green;
+        // width: 160%;
+        // margin-left: 5%;
+        width: 100px;
+        height: 290px;
+        margin-left: -4px;
+
+
+    }
+
+    .image {
+        margin-left: 10px;
+    }
+
+    .entirebook {
+        // border: 1px solid black;
+        // margin-top: -2%;
+        // margin-left: 10%;
+        width: 230px;
+        // margin-right:50px;
+        position: relative;
+        right: 5px;
+
+
+    }
+
+    .bookname {
+        margin-left: 15px;
+        font-family: Roboto;
+        font-weight: 500;
+        margin-top: 8px;
+        font-size: 18px;
+        margin-bottom: 5px;
+
+    }
+
+    .author {
+        font-size: 12px;
+        color: grey;
+        margin-left: 15px;
+        margin-bottom: 5px;
+
+    }
+
+    .price {
+        font-size: 15px;
+        margin-left: 15px;
+        margin-bottom: 10%;
+
+    }
+
+    .discountprice {
+        font-weight: 620;
+
+    }
+
+    .originalprice {
+        color: grey;
+
+    }
+
+    .quantity {
+        // border: 1px solid palevioletred;
+        position: relative;
+        left: 10px;
+
+    }
+
+    .negativebutton {
+        background-color: white;
+        margin-right: 10px;
+        width: 24px;
+        height: 24px;
+    }
+
+    .negative {
+        color: lightgrey;
+        position: relative;
+        top: -10px;
+
+    }
+
+    .bookquantity {
+        font-size: 15px;
+        border: 1px solid whitesmoke;
+        // height: 25px;
+        // width: 40px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        text-align: center;
+        width: 40px;
+        height: 23px;
+
+    }
+
+    .positivebutton {
+        background-color: white;
+        margin-left: 10px;
+        width: 24px;
+        height: 24px;
+
+    }
+
+    .positive {
+        color: black;
+        position: relative;
+        top: -10px;
+
+    }
+
+    .remove {
+        margin-left: 15px;
+        font-size: 15px;
+        font-family: Lato;
+        cursor: pointer;
+
+    }
+
+
+    .rightdiv {
+        // border: 1px solid yellow;
+        // margin-top: -50px;
+        // margin-left: 100px;
+        // margin-right: 250px;
+        // height: 320px;
+    }
+
+
+    .panel2 {
+        // border: 1px solid red;
+        width: 385px;
+        position: relative;
+        right: 195px;
+    }
+
+    .maindivofform {
+        // border: 1px solid blue;
+        width: 350px;
+    }
+
+    .details {
+        // margin-right: 20px;
+        margin-bottom: 20px;
+        // border: 1px solid yellow;
+        // margin-left: 30px;
+        // margin-right: 30px;
+        position: relative;
+        right: 20px;
+
+    }
+
+    .mat-form-field {
+        // border: 1px solid red;
+        width: 170px;
+    }
+
+    .fullname {
+        // border: 1px solid chocolate;
+        // margin-right: 30px;
+        position: relative;
+        right: 25px;
+    }
+
+    .mobileno {
+        // border: 1px solid chocolate;
+        // margin-right: 30px;
+        width: auto;
+        position: relative;
+        right: 32px;
+
+    }
+
+    .addressofcustomer {
+        // border: 1px solid chocolate;
+        // margin-right: 30px;
+        position: relative;
+        right: 25px;
+    }
+
+    .city {
+        // border: 1px solid chocolate;
+        // margin-right: 30px;
+        position: relative;
+        right: 25px;
+    }
+
+    .state {
+        // border: 1px solid chocolate;
+        // margin-right: 30px;
+        width: auto;
+        position: relative;
+        right: 10px;
+    }
+
+    .type {
+        position: relative;
+        right: 45px;
+        // margin-left: 30px;
+        margin-bottom: 20px;
+        font-weight: 500;
+    }
+
+    .home {
+        // border: 1px solid chocolate;
+        // margin-right: 60px;
+        position: relative;
+        right: 45px;
+    }
+
+    .work {
+        // border: 1px solid chocolate;
+        margin-left: 100px;
+        position: relative;
+        right: 90px;
+
+    }
+
+    .other {
+        // border: 1px solid chocolate;
+        margin-left: 100px;
+        position: relative;
+        left: 115px;
+        bottom: 23px;
+
+    }
+
+    .addressandcontinue {
+        // border: 1px solid green;
+        position: relative;
+        // top: -455px;
+        // bottom: 420px;
+        // right: 100px;
+        margin-top: 300px;
+        margin-left: -255px;
+        width: 20px;
+
+    }
+
+    // .address{
+    //     border: 1px solid darkred;
+    //     color: darkred;
+    //     // margin-right: 20px;
+    //     margin-top: 20px;
+    //     margin-bottom: 20px;
+    //     height: 40px;
+    //     width: 180px;
+    //     position: relative;
+    //     // left: 100px;
+    //     // right: 100px;
+    // }
+    .continuebutton {
+        width: 150px;
+        // margin-left: 15px;
+        position: relative;
+        top: 170px;
+        // left: 95px;
+    }
+
+    .panel3 {
+        width: 385px;
+        position: relative;
+        right: 195px;
+    }
+
+    .checkoutbutton {
+        border: 1px solid green;
+        
+        width: 120px;
+        // position: relative;
+        // // left: 130px;
+        // top: 150px;
+        // left: 90px;
+        margin-left: 200px;
+        // margin-top: -100px;
+    }
 }
