--- a/src/app/component/orderplacedsuccessfully/orderplacedsuccessfully.component.scss
+++ b/src/app/component/orderplacedsuccessfully/orderplacedsuccessfully.component.scss
@@ -1,10 +1,8 @@
-.section{
+.section {}
 
-}
-.placeorder{
+.placeorder {}
 
-}
-.orderimg{
+.orderimg {
     width: 200px;
     height: 200px;
     margin-top: 90px;
@@ -12,25 +10,112 @@
     // align-items: center;
 
 }
-p{
+
+.hurray {}
+
+p {
     text-align: center;
     font: normal normal normal 18px/22px Lato;
     color: #333232;
     opacity: 1;
 }
 
-table,tr, td {
+.ordertable {}
+
+table,
+tr,
+td {
     border: 1px solid lightgray;
 }
 
-th{
+th {
     background-color: whitesmoke;
 }
 
-.continuebutton{
+.continue {}
+
+.continuebutton {
     margin-top: 40px;
     margin-left: 590px;
     width: 200px;
     text-align: center;
     justify-content: center;
+}
+
+@media(max-width:550px) {
+    .section {
+        // box-sizing: border-box;
+        width: fit-content;
+    }
+
+    .placeorder {
+        // border: 1px solid yellow;
+    }
+
+    .orderimg {
+        // border: 1px solid red;
+        width: 100px;
+        height: 100px;
+        // margin-top: 90px;
+        // margin-left: 590px;
+        // align-items: center;
+
+        position: relative;
+        right: 430px;
+
+    }
+
+    .hurray p {
+        // border: 1px solid green;
+        margin-right: 220px;
+        
+    }
+
+    .ordertable {
+        border: 1px solid red;
+        width: 520px;
+    }
+  table{
+    width: 50%;
+   
+  }
+    .table1 {
+        border: 1px solid violet;
+        // position: relative;
+        // right: 210px;
+         margin-right: 50px;
+         
+       
+
+    }
+
+    table,
+    tr,
+    td {
+        border: 1px solid lightgray;
+        // margin-right: 300px;
+        width: 30%;
+        
+        
+
+    }
+
+    th {
+        background-color: whitesmoke;
+        
+    }
+
+    .continue {
+        // border: 1px solid brown;
+    }
+
+    .continuebutton {
+        margin-top: 40px;
+        // margin-left: 590px;
+        width: 200px;
+        // text-align: center;
+        // justify-content: center;
+
+        margin-left: 120px;
+    }
 }
